--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -135,7 +135,7 @@ $bio-width: 450px;
 .individual {
     width: $bio-width + 347px;
     height: auto;
-    margin: 30px auto;
+    margin: auto;
     img {
         margin: 10px;
         display: inline-block;
