--- a/app/assets/stylesheets/performances.css.scss
+++ b/app/assets/stylesheets/performances.css.scss
@@ -13,10 +13,8 @@
 .performance {
     width: $performance-width;
     height: auto;
-    margin-top: 40px;
     margin-left: 0px;
     margin-right: 0px;
-    margin-bottom: 20px;
     box-shadow: 5px 9px 0px 1px $sub-color-2;
     color: white;
     .performance-deets {
